# FiltrObrazu

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: buffalo.pgm  filtr10.txt  filtrgauss.txt  sobel_filter1.txt  sobel_filter2.txt
inc/: ConsoleInterface.h  FileHandler.h  FileHandlerFactory.h  FileHandlerPAM.h  FileHandlerTGA.h  Filter.h  Image.h  ImagePGM.h  ImagePPM.h  wnFilter.h  wnImage.h
src/: CMakeLists.txt  ConsoleInterface.cpp  FileHandlerFactory.cpp  FileHandlerPBM.cpp  FileHandlerPGM.cpp  FileHandlerPPM.cpp  FileHandlerTGA.cpp  Filter.cpp  Image.cpp  ImageGray.cpp  ImageGray.h  ImagePGM.cpp  ImagePPM.cpp  ImageRGB.cpp  ImageRGB.h  main.cpp  wnFilter.cpp
